## Process this file with automake to produce Makefile.in

noinst_LIBRARIES= libfe.a
libfe_a_SOURCES = FEArrayDeclarator.cpp FEStructType.cpp FEArrayType.cpp FEFunctionDeclarator.cpp FEAttribute.cpp FEIdentifier.cpp FEBase.cpp FEIntAttribute.cpp FERangeAttribute.cpp FEBinaryExpression.cpp FEInterface.cpp FETypeAttribute.cpp FEConditionalExpression.cpp FETypeSpec.cpp FEConstDeclarator.cpp FEIsAttribute.cpp FETypedDeclarator.cpp FEConstructedType.cpp FELibrary.cpp FEUnaryExpression.cpp FEDeclarator.cpp FEUnionCase.cpp FEEndPointAttribute.cpp FEOperation.cpp FEUnionType.cpp FEIDLUnionType.cpp FEEnumDeclarator.cpp FEPipeType.cpp FETypeOfType.cpp FEUserDefinedExpression.cpp FEEnumType.cpp FEPrimaryExpression.cpp FEUserDefinedType.cpp FEExceptionAttribute.cpp FEPtrDefaultAttribute.cpp FEVersionAttribute.cpp FEExpression.cpp FESimpleType.cpp FEFile.cpp FEStringAttribute.cpp FESizeOfExpression.cpp FEAlignOfExpression.cpp FEAttributeDeclarator.cpp ConsistencyVisitor.cpp PostParseVisitor.cpp ASTDumper.cpp

noinst_HEADERS = FEArrayDeclarator.h FEFileComponent.h FEStructType.h FEArrayType.h FEFunctionDeclarator.h FEAttribute.h FEIdentifier.h FEBase.h FEIntAttribute.h FERangeAttribute.h FEBinaryExpression.h FEInterface.h FETypeAttribute.h FEConditionalExpression.h FEInterfaceComponent.h FETypeSpec.h FEConstDeclarator.h FEIsAttribute.h FETypedDeclarator.h FEConstructedType.h FELibrary.h FEUnaryExpression.h FEDeclarator.h FEUnionCase.h FEEndPointAttribute.h FEOperation.h FEUnionType.h FEIDLUnionType.h FEEnumDeclarator.h FEPipeType.h FETypeOfType.h FEUserDefinedExpression.h FEEnumType.h FEPrimaryExpression.h FEUserDefinedType.h FEExceptionAttribute.h FEPtrDefaultAttribute.h FEVersionAttribute.h FEExpression.h FESimpleType.h FEFile.h FEStringAttribute.h FESizeOfExpression.h FEAlignOfExpression.h FEAttributeDeclarator.h ConsistencyVisitor.h PostParseVisitor.h ASTDumper.h

AM_CXXFLAGS = @DICE_CXXFLAGS@
