## Process this file with automake to produce Makefile.in

SUBDIRS=		v2 x0 x0adapt

noinst_LIBRARIES=	libl4.a
libl4_a_SOURCES=	L4BECallFunction.cpp \
			L4BEReplyRcvFunction.cpp \
			L4BETestServerFunction.cpp \
			L4BEHeaderFile.cpp \
			L4BEReplyWaitFunction.cpp \
			L4BETestsuite.cpp \
			L4BEMsgBufferType.cpp \
			L4BESizes.cpp \
			L4BETypedDeclarator.cpp \
			L4BEO1Marshaller.cpp \
			L4BESndFunction.cpp \
			L4BEUnmarshalFunction.cpp \
			L4BERcvAnyFunction.cpp \
			L4BESrvLoopFunction.cpp \
			L4BEWaitAnyFunction.cpp \
			L4BERcvFunction.cpp \
			L4BETestFunction.cpp \
			L4BEWaitFunction.cpp \
			L4BEReplyAnyWaitAnyFunction.cpp \
			L4BETestMainFunction.cpp \
			L4BEClass.cpp \
			L4BENameFactory.cpp \
			L4BEClassFactory.cpp

noinst_HEADERS=		L4BECallFunction.h \
			L4BEReplyRcvFunction.h \
			L4BETestServerFunction.h \
			L4BEHeaderFile.h \
			L4BEReplyWaitFunction.h \
			L4BETestsuite.h \
			L4BEMsgBufferType.h \
			L4BESizes.h \
			L4BETypedDeclarator.h \
			L4BEO1Marshaller.h \
			L4BESndFunction.h \
			L4BEUnmarshalFunction.h \
			L4BERcvAnyFunction.h \
			L4BESrvLoopFunction.h \
			L4BEWaitAnyFunction.h \
			L4BERcvFunction.h \
			L4BETestFunction.h \
			L4BEWaitFunction.h \
			L4BEReplyAnyWaitAnyFunction.h \
			L4BETestMainFunction.h \
			L4BEClass.h \
			L4BENameFactory.h \
			L4BEClassFactory.h
