## Process this file with automake to produce Makefile.in

SUBDIRS = amd64

noinst_LIBRARIES = libfiasco.a

libfiasco_a_SOURCES = L4FiascoBEClassFactory.cpp L4FiascoBESizes.cpp L4FiascoBEIPC.cpp L4FiascoBEMsgBuffer.cpp L4FiascoBENameFactory.cpp L4FiascoBEClass.cpp L4FiascoBEDispatchFunction.cpp L4FiascoBEClass.cpp L4FiascoBESrvLoopFunction.cpp L4FiascoBEWaitAnyFunction.cpp

noinst_HEADERS = L4FiascoBEClassFactory.h L4FiascoBESizes.h L4FiascoBEIPC.h L4FiascoBEMsgBuffer.h L4FiascoBENameFactory.h L4FiascoBEClass.h L4FiascoBEDispatchFunction.h L4FiascoBEClass.h L4FiascoBESrvLoopFunction.h L4FiascoBEWaitAnyFunction.h

AM_CXXFLAGS = @DICE_CXXFLAGS@
