## Process this file with automake to produce Makefile.in

SUFFIXES=		.cpp
noinst_LIBRARIES=	libv2.a
			
libv2_a_SOURCES = L4V2BEClassFactory.cpp 			L4V2BESizes.cpp 			L4V2BECallFunction.cpp 			L4V2BEIPC.cpp 			L4V2BESndFunction.cpp 			L4V2BEMarshaller.cpp L4V2BEReplyFunction.cpp

noinst_HEADERS = L4V2BEClassFactory.h 			L4V2BESizes.h 			L4V2BECallFunction.h 			L4V2BEIPC.h 			L4V2BESndFunction.h 			L4V2BEMarshaller.h L4V2BEReplyFunction.h

