## Process this file with automake to produce Makefile.in

SUBDIRS			= arm ia32

SUFFIXES		= .cpp
noinst_LIBRARIES	= libx0.a
libx0_a_SOURCES 	= L4X0BEClassFactory.cpp \
			  L4X0BESizes.cpp \
			  L4X0BECallFunction.cpp \
			  L4X0BESndFunction.cpp \
			  L4X0BERcvAnyFunction.cpp \
			  L4X0BERcvFunction.cpp \
			  L4X0BEReplyAnyWaitAnyFunction.cpp \
			  L4X0BEWaitAnyFunction.cpp \
			  L4X0BEWaitFunction.cpp \
			  L4X0BEIPC.cpp \
			  L4X0BEReplyFunction.cpp
noinst_HEADERS		= L4X0BEClassFactory.h \
			  L4X0BESizes.h \
			  L4X0BECallFunction.h \
			  L4X0BESndFunction.h \
			  L4X0BERcvAnyFunction.h \
			  L4X0BERcvFunction.h \
			  L4X0BEReplyAnyWaitAnyFunction.h \
			  L4X0BEWaitAnyFunction.h \
			  L4X0BEWaitFunction.h \
			  L4X0BEIPC.h \
			  L4X0BEReplyFunction.h 

