## Process this file with automake to produce Makefile.in

SUFFIXES		= .cpp
noinst_LIBRARIES	= libx0adapt.a
libx0adapt_a_SOURCES 	= L4X0aBEClassFactory.cpp \
			  L4X0aBESizes.cpp \
			  L4X0aBECallFunction.cpp \
			  L4X0aBESndFunction.cpp \
			  L4X0aBEWaitAnyFunction.cpp \
			  L4X0aBEWaitFunction.cpp \
			  L4X0aIPC.cpp \
			  L4X0aBEReplyFunction.cpp
noinst_HEADERS		= L4X0aBEClassFactory.h \
			  L4X0aBESizes.h \
			  L4X0aBECallFunction.h \
			  L4X0aBESndFunction.h \
			  L4X0aBEWaitAnyFunction.h \
			  L4X0aBEWaitFunction.h \
			  L4X0aIPC.h \
			  L4X0aBEReplyFunction.h 

