## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libfiascoamd64.a

libfiascoamd64_a_SOURCES = L4FiascoAMD64ClassFactory.cpp L4FiascoAMD64Sizes.cpp L4FiascoAMD64NameFactory.cpp

noinst_HEADERS = L4FiascoAMD64ClassFactory.h L4FiascoAMD64Sizes.h L4FiascoAMD64NameFactory.h

AM_CXXFLAGS = @DICE_CXXFLAGS@
